[package]
name = "burncloud-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
anyhow = { workspace = true }
http-body-util.workspace = true
serde_json = { workspace = true }
dashmap.workspace = true

burncloud-database = { workspace = true }
burncloud-database-router = { workspace = true }
burncloud-database-models = { workspace = true }
burncloud-router-aws = { workspace = true }
burncloud-common = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }

axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
rand.workspace = true
async-trait.workspace = true
futures = "0.3.31"
regex = "1.12.3"

[dev-dependencies]
mockito = "1.7.1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"

[[example]]
name = "configure_apikey_test"
path = "examples/configure_apikey_test.rs"
