[package]
name = "burncloud-router"
version = "0.1.0"
edition = "2021"

[features]
exchange-api = []

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
anyhow = { workspace = true }
http-body-util.workspace = true
serde_json = { workspace = true }
dashmap.workspace = true

burncloud-database = { workspace = true }
burncloud-database-router = { workspace = true }
burncloud-database-models = { workspace = true }
burncloud-router-aws = { workspace = true }
burncloud-common = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }

axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
rand.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true

[dev-dependencies]
mockito.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true

[[example]]
name = "configure_apikey_test"
path = "examples/configure_apikey_test.rs"
