[package]
name = "burncloud-server"
version = "0.1.9"
edition = "2021"
description = "Server component for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "server", "api"]
categories = ["web-programming"]

[dependencies]
burncloud-common.workspace = true
burncloud-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
burncloud-database = { workspace = true }
burncloud-database-router = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }