[package]
name = "burncloud-server"
version = "0.1.9"
edition = "2021"
description = "Server component for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "server", "api"]
categories = ["web-programming"]

[dependencies]
burncloud-common.workspace = true
burncloud-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["cors"] }
burncloud-database = { workspace = true }
burncloud-database-router = { workspace = true }
burncloud-database-models = { workspace = true }
burncloud-database-user = { workspace = true }
burncloud-router = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
burncloud-client = { workspace = true, features = ["liveview"] }
dioxus.workspace = true
dioxus-liveview.workspace = true
burncloud-service-monitor = { workspace = true }
bcrypt = "0.17.1"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
