[package]
publish.workspace = true
name = "burncloud-server"
version = "0.1.9"
edition = "2021"
description = "Server component for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "server", "api"]
categories = ["web-programming"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["cors", "trace", "request-id"] }
burncloud-database = { workspace = true }
burncloud-database-router = { workspace = true }
burncloud-database-user = { workspace = true }
burncloud-router = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
burncloud-client = { workspace = true, features = ["liveview"] }
burncloud-service-monitor = { workspace = true }
burncloud-service-user = { workspace = true }
burncloud-service-group = { workspace = true }
burncloud-service-token = { workspace = true }
burncloud-service-router-log = { workspace = true }
burncloud-service-channel = { workspace = true }
burncloud-service-upstream = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tempfile = { workspace = true }

[lints]
workspace = true
