[package]
name = "burncloud-service-monitor"
version = "0.1.0"
edition = "2021"
description = "Cross-platform system monitoring tool library for BurnCloud applications"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["pdh", "psapi", "winbase", "winnt", "fileapi", "handleapi", "winuser", "winerror", "sysinfoapi", "winreg"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"