[package]
name = "burncloud-service"
version = "0.1.0"
edition = "2021"

[dependencies]
burncloud-service-ip.workspace = true
burncloud-service-models.workspace = true
burncloud-service-monitor.workspace = true
burncloud-service-inference.workspace = true
burncloud-service-upstream.workspace = true
burncloud-service-token.workspace = true
burncloud-service-group.workspace = true
burncloud-service-router-log.workspace = true
