[package]
name = "burncloud-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true }
burncloud-common.workspace = true
burncloud-router.workspace = true
burncloud-database-router-log.workspace = true
burncloud-service-monitor.workspace = true
