[package]
name = "burncloud-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true }
burncloud-common.workspace = true
ssh2 = "0.9"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
chrono = { workspace = true }
burncloud-server.workspace = true
burncloud-database-upstream.workspace = true
tempfile = { workspace = true }
aes-gcm = { workspace = true }

[[test]]
name = "local_nodejs_test"
path = "tests/installer/local_nodejs_test.rs"
