[package]
license.workspace = true
name = "burncloud-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true }
burncloud-common.workspace = true
burncloud-database.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
ssh2 = "0.9"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
chrono = { workspace = true }

[[test]]
name = "local_nodejs_test"
path = "tests/installer/local_nodejs_test.rs"

[[test]]
name = "e2e_smoke"
path = "tests/e2e_smoke.rs"

[[test]]
name = "logging_test"
path = "tests/logging_test.rs"

[dev-dependencies]
burncloud-server.workspace = true
tracing.workspace = true
log.workspace = true
tempfile.workspace = true

[lints]
workspace = true
