[package]
name = "burncloud-database-{{crate_name}}"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
burncloud-common.workspace = true
burncloud-database.workspace = true
async-trait.workspace = true
sqlx.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
