[package]
name = "burncloud-database-{{crate_name}}"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
# Template crate — all deps are intentional boilerplate for cargo-generate
ignored = ["serde", "thiserror", "tracing", "async-trait"]

[dependencies]
burncloud-common.workspace = true
burncloud-database.workspace = true
async-trait.workspace = true
sqlx.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
