[package]
name = "burncloud-service-{{crate_name}}"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
# Template crate — all deps are intentional boilerplate for cargo-generate
ignored = ["async-trait", "thiserror", "tracing"]

[dependencies]
burncloud-common.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
# TODO: add burncloud-domain-{{crate_name}} once domain crate exists
# burncloud-domain-{{crate_name}}.workspace = true
