[package]
name = "burncloud-client-api"
version = "0.1.2"
edition = "2021"
description = "API management page for BurnCloud client applications"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
dioxus.workspace = true
burncloud-client-shared.workspace = true
uuid = { version = "1.4", features = ["v4"] }