[package]
name = "burncloud-client-burngrid"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus.workspace = true
burncloud-client-shared = { workspace = true }
tokio = { workspace = true }
burncloud-service-models = { workspace = true }
burncloud-service-inference = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
